--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,9 +17,9 @@
     <![endif]-->
   </head>
   <body>
-
-	{{content}}
-
+    <div class="container">
+	   {{content}}
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
